# doan2_DH22KPM02_VoNguyenGiaHuy_MatchingEngine_ZKP

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/: copilot-instructions.md
core/: Cargo.toml
core/benches/: engine_benchmark.rs
core/migrations/: 0001_initial_schema.sql  0002_seed_data.sql  0002_user_display_name.sql  0003_admin_features.sql  0003_ohlcv.sql  0004_auth.sql  0004_zkp_snapshots.sql
core/src/: lib.rs  main.rs
core/src/api/: admin.rs  auth.rs  data.rs  metrics.rs  mod.rs  orders.rs  router.rs  state.rs  wallet.rs  ws.rs  zkp.rs
core/src/db/: mod.rs  pool.rs  schema.rs  worker.rs
core/src/engine/: engine.rs  error.rs  mod.rs  order_book.rs  types.rs
core/src/ledger/: mod.rs
core/src/observability/: metrics.rs
data/: btcusdt_snapshot.json  btcusdt_trades.json  markets_snapshot.json  markets_ticker_24h.json  markets_trades.json
docker/grafana/dashboards/: cex-observability.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/init/: 00_extensions.sql
docker/prometheus/: prometheus.yml
docs/: report.md  techstack.md  wbs.csv
report/: ALGORITHM.md  BUSINESS_LOGIC.md  DATABASE.md  DATAFLOW.md  SVELTE.md  TECH_AND_ALGORITHM.md  WASM.md  ZKP.md
scripts/: fetch_binance.ps1  fetch_binance.sh  refresh_market_data.ps1  seed_orderbook.ps1  seed_orderbook.sh
web/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  types.d.ts  vite.config.ts
web/nginx/: default.conf
web/src/: App.svelte  main.ts
web/src/components/layout/: Navbar.svelte  TopBar.svelte
web/src/components/orderbook/: OrderBookPanel.svelte
web/src/components/pages/: AdminPage.svelte  AssetPage.svelte  DashboardPage.svelte  LandingPage.svelte  LoginPage.svelte  TestingPage.svelte  TradeHistoryPage.svelte  TradePage.svelte  WalletPage.svelte  ZkVerifyPage.svelte
web/src/components/simulator/: SimulatorPanel.svelte
web/src/components/testing/: ExchangeFundsForm.svelte
web/src/components/trade/: MarketTicker.svelte  OpenOrdersPanel.svelte  RecentTradesPanel.svelte  TradeFormPanel.svelte
web/src/components/trading/: TradingChart.svelte
web/src/components/user/: UserHeader.svelte
web/src/components/wallet/: MockDepositForm.svelte  TradeHistoryPanel.svelte  WalletBalances.svelte
web/src/components/zkp/: ZkpExchangePanel.svelte  ZkpVerifierPanel.svelte
web/src/lib/: marketMeta.ts  zkp-types.ts  zkp-verify.ts  zkp-wasm.ts
web/src/lib/api/: client.ts
web/src/stores/: appStore.ts  authStore.ts  marketStore.ts  orderBookStore.ts  routerStore.ts
web/src/styles/: app.css
zkp/: Cargo.toml
zkp/src/: circuit.rs  lib.rs  snark.rs  tree.rs  verifier.rs
