[package]
name = "core"
version = "0.1.0"
edition = "2021"

# Library target: exposes engine, api, db modules to benchmarks and future integration tests.
# Named "matching_engine" to avoid ambiguity with the stdlib `core` crate.
[lib]
name = "matching_engine"
path = "src/lib.rs"

[[bin]]
name = "core"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }

# Financial math - CRITICAL: never use f32/f64 for currency
rust_decimal = { version = "1", features = ["serde-float"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Observability (Prometheus metrics)
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# Error handling
thiserror = "1"

# Database (async persistence only)
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "rust_decimal",
    "uuid",
] }

# UUID for ID generation
uuid = { version = "1", features = ["v4"] }

# Timestamps (required by sqlx chrono feature)
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# High-performance RwLock
parking_lot = "0.12"

# Internal ZKP crate (Merkle tree + circuit primitives)
zkp = { path = "../zkp" }

[dev-dependencies]
# Property-based testing (fuzzing)
proptest = "1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Decimal literals in tests: dec!(100.5)
rust_decimal_macros = "1"

[[bench]]
name = "engine_benchmark"
harness = false
