[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# ZK-friendly hash function (Poseidon Hash) - arkworks ecosystem
# Note: specific arkworks crates will be added in ZKP-02 after verifying exact APIs

# Financial math (consistent with core crate)
rust_decimal = { version = "1", features = ["serde-float"] }

# Serialization for proof data
serde = { version = "1", features = ["derive"] }

# Wasm bindings - compiled by wasm-pack for client-side verification
wasm-bindgen = "0.2"

[dev-dependencies]
# Property-based testing for the Merkle Sum Tree logic
proptest = "1"
