[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# ZK-friendly hash function (Poseidon Hash) - arkworks ecosystem
ark-bn254 = "0.3"
ark-ff = "0.3"
ark-sponge = { version = "0.3", features = ["r1cs"] }
ark-r1cs-std = "0.3"
ark-relations = "0.3"

# Financial math (consistent with core crate)
rust_decimal = { version = "1", features = ["serde-float"] }
num-traits = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# Serialization for proof data
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Wasm bindings - compiled by wasm-pack for client-side verification
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ark-groth16 = "0.3"
ark-serialize = "0.3"
base64 = "0.22"

[dev-dependencies]
# Property-based testing for the Merkle Sum Tree logic
proptest = "1"
rust_decimal_macros = "1"
